--- a/trunk/presentazione/presentazione.lyx
+++ b/trunk/presentazione/presentazione.lyx
@@ -107,7 +107,7 @@ Alma Mater Studiorum, Bologna
 \end_layout
 
 \begin_layout BeginFrame
-Outline
+Sommario
 \end_layout
 
 \begin_layout Standard
@@ -135,6 +135,48 @@ Background
 Background
 \end_layout
 
+\begin_layout Itemize
+Tipicamente le aziende trattate da Wincor Nixdorf possiedono centinaia di
+ Punti di Vendita 
+\end_layout
+
+\begin_layout Itemize
+importanti costi di trasporto, destinati a crescere nel tempo: necessitano
+ ottimizzazione
+\end_layout
+
+\begin_layout Itemize
+Negli ultimi anni alcuni clienti hanno tentato di affrontare con dei progetti
+ autonomi, ma hanno fallito: 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+La complessità del problema è stata sottovalutata 
+\end_layout
+
+\begin_layout Enumerate
+si è cercato di dare uno strumento sositicato al responsabile delle spedizioni
+ ma: 
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+non aveva il bagaglio culturale necessario
+\end_layout
+
+\begin_layout Enumerate
+provocava un conflitto di interessi
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+Non si è capito la necessità di integrazione fra lo strumento di integrazione
+ cartografica e le altre parti del processo (es.
+ picking ed il carico del camion) in modo da rispettare la pianicazione
+\end_layout
+
+\end_deeper
 \begin_layout EndFrame
 
 \end_layout
@@ -147,6 +189,45 @@ Il problema
 Il problema
 \end_layout
 
+\begin_layout Itemize
+I problemi dei clienti erano riconducibili al problema dell'instadamanento
+ dei veicoli (
+\begin_inset Quotes eld
+\end_inset
+
+Vehicle Routing Problem
+\begin_inset Quotes erd
+\end_inset
+
+), che è un classico della Ricerca Operativa:
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+bisogna collegare tutti i punti di consegna, minimizzando il numero delle
+ gite (veicoli) impiegati
+\end_layout
+
+\begin_layout Enumerate
+contemporaneamente minimizzare anche il costo totale delle gite
+\end_layout
+
+\end_deeper
+\begin_layout Itemize
+Le moderne soluzioni di pianificazione cartografica già risolvono questo
+ tipo di problemi
+\end_layout
+
+\begin_layout Itemize
+Wincor Nixdorf ha quindi ritenuto che i tempi fossero maturi per spingere,
+ con alcuni dei clienti principali, un progetto di minimizzazione costi
+ trasporto che utilizzasse un sosticato tool di pianicazione cartografica
+\end_layout
+
+\begin_layout Itemize
+Era tuttavia necessario prima eseguire uno studio di fattibilità
+\end_layout
+
 \begin_layout EndFrame
 
 \end_layout
@@ -157,6 +238,87 @@ Gli strumenti disponibili
 
 \begin_layout BeginFrame
 Gli strumenti disponibili
+\end_layout
+
+\begin_layout Itemize
+Era già stato svolto un piccolo studio sugli strumenti disponibili sul mercato:
+ tra tutti erano stati scelti quelli della azienda tedesca PTV
+\end_layout
+
+\begin_layout Standard
+\align center
+
+\lang english
+\begin_inset Box Frameless
+position "t"
+hor_pos "c"
+has_inner_box 1
+inner_pos "t"
+use_parbox 0
+width "40col%"
+special "none"
+height "1in"
+height_special "totalheight"
+status open
+
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{PTV Intertour}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Block
+Defined protocols
+\end_layout
+
+\end_inset
+
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset Box Frameless
+position "t"
+hor_pos "c"
+has_inner_box 1
+inner_pos "t"
+use_parbox 0
+width "40col%"
+special "none"
+height "1in"
+height_special "totalheight"
+status open
+
+\begin_layout Block
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+{PTV XTour}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Itemize
+Dovevamo valutare quale fosse il migliore
 \end_layout
 
 \begin_layout EndFrame
