--- a/presentazione/presentazione.lyx
+++ b/presentazione/presentazione.lyx
@@ -581,30 +581,12 @@ Il cliente ha reputato promettente il progetto
 \end_layout
 
 \begin_layout Itemize
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-'E
-\end_layout
-
-\end_inset
-
- emersa una possibile mancanza di completezza nelle mappe cartografiche
-\end_layout
-
-\begin_deeper
-\begin_layout Itemize
 Si è optato per rendere disponibile l'utilizzo dello strumento direttamente
  al responsabile delle spedizioni: 
 \color green
-conflitto di interessi risolto, aumento di competenza professionale
+conflitto di interessi risolto, opportunità di crescita professionale
 \end_layout
 
-\end_deeper
 \begin_layout Itemize
 Si è optato quindi di non scartare il lavoro già svolto con Intertour, e
  vedere di migliorare in seguito
@@ -612,7 +594,7 @@ Si è optato quindi di non scartare il lavoro già svolto con Intertour, e
 
 \begin_deeper
 \begin_layout Itemize
-PTV Intertour Standard offriva una buona interfaccia
+PTV Intertour Standard offriva un'interfaccia piuttosto intuitiva
 \end_layout
 
 \begin_layout Itemize
